# school-projects

./: README.md
advanced-cpp/arithmetic/: CMakeLists.txt
advanced-cpp/arithmetic/app/: delaunay_triangulation.cpp  test_interval.cpp  test_kernel.cpp
advanced-cpp/arithmetic/include/ra/: interval.hpp  kernel.hpp
advanced-cpp/basics/: CMakeLists.txt
advanced-cpp/basics/app/: test_random.cpp  test_rational.cpp
advanced-cpp/basics/include/ra/: random.hpp  rational.hpp
advanced-cpp/basics/lib/: random.cpp
advanced-cpp/cache/: CMakeLists.txt
advanced-cpp/cache/app/: test_fft.cpp  test_matrix_multiply.cpp  test_matrix_transpose.cpp
advanced-cpp/cache/include/ra/: fft.hpp  matrix_multiply.hpp  matrix_transpose.hpp
advanced-cpp/compile_time/: CMakeLists.txt
advanced-cpp/compile_time/app/: test_biquad_filter.cpp  test_cexpr_basic_string.cpp  test_cexpr_math.cpp  test_mandelbrot.cpp
advanced-cpp/compile_time/include/ra/: biquad_filter.hpp  cexpr_basic_string.hpp  cexpr_math.hpp  mandelbrot.hpp
advanced-cpp/concurrency/: CMakeLists.txt
advanced-cpp/concurrency/app/: test_julia_set.cpp  test_queue.cpp  test_thread_pool.cpp
advanced-cpp/concurrency/include/ra/: julia_set.hpp  queue.hpp  thread_pool.hpp
advanced-cpp/concurrency/lib/: thread_pool.cpp
advanced-cpp/containers/: CMakeLists.txt
advanced-cpp/containers/app/: test_intrusive_list.cpp  test_sv_set.cpp
advanced-cpp/containers/include/ra/: intrusive_list.hpp  parent_from_member.hpp  sv_set.hpp
advanced-cpp/quadtree/: .gitignore  CMakeLists.txt  README.txt  main.cpp  presentation.url
advanced-cpp/quadtree/include/sim/: quad.hpp  shapes.hpp  window.hpp
advanced-cpp/quadtree/src/: shapes.cpp  window.cpp
advanced-cpp/quadtree/test/: test.cpp
advanced-cpp/tools/boost_timer/: CMakeLists.txt
advanced-cpp/tools/buggy/: CMakeLists.txt  Sanitizers.cmake
advanced-cpp/tools/cgal_in_circle/: CMakeLists.txt
advanced-cpp/tools/coverage/: CMakeLists.txt
advanced-cpp/tools/fibonacci/: CMakeLists.txt
advanced-cpp/tools/hg2g/: CMakeLists.txt
arm-optimization-project/: .gitignore  README.md  mu_compress.c  mu_expand.c  test.h  wav.h
arm-optimization-project/expand-code/: expand_orig.c  expand_pipe_dec.c  expand_pipe_lut_reordered.c  expand_shift.c  expand_switch.c  final.S  final.c  new_instr.S  new_instr.c
arm-optimization-project/test/: compressed.txt  expanded.txt
computer-architecture/: blink.asm
operating-systems/dining-philosophers/: Makefile  README.md  diningOut.c
operating-systems/llfs/: README.md  report.txt
operating-systems/map-reduce-l1-fitting/: Makefile  README.md  main.c  matrix.c  matrix.h  mreduce.c  mreduce.h
operating-systems/shell/: Makefile  SEEsh.c  doublylinkedlist.c  test.SEEshrc
operating-systems/worm/: .gitignore  scheduler.c  worm.c
systemc/: README.md
systemc/adaptors/: adder.hpp  fork.hpp  generator.hpp  hw_fifo.hpp  main.cpp  printer.hpp  read_adapt.hpp  write_adapt.hpp
systemc/behavioural-filter/: filter_b.cpp  filter_b.hpp  main.cpp  mon.hpp  stim.hpp
systemc/diffie-helman-key-exchange/: dh_hw.h  dh_sw.cpp  dh_sw.h  dhdemo.cpp
systemc/diffie-helman-key-exchange/hw_process/: bonus.hpp  bonus_controller.hpp  controller.hpp  register.hpp  required.hpp
systemc/diffie-helman-key-exchange/hw_process/components/: add2.hpp  and2.hpp  eq2.hpp  expand.hpp  gteq.hpp  is_gt.hpp  left_shift.hpp  logic_and2.hpp  logic_or2.hpp  mult2.hpp  mux2.hpp  right_shift.hpp  sub2.hpp  truncate.hpp
systemc/fifo-interface/: consumer.h  fifo.h  fifo_if.h  main.cpp  producer.h
systemc/memory/: main.cpp  memory.cpp  memory.hpp  stim.cpp  stim.hpp
systemc/process-filter/: filter.h  main.cpp  mon.h  stim.h
systemc/structural-filter/: adder.hpp  filter_s.hpp  main.cpp  mon.hpp  multiplier.hpp  register.hpp
